removed boootsrap & modified footer

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -112,7 +112,7 @@ body{
     width: 100%;    
 }
 .footer {
-	background: #002147;
+	background:#35424a;
   height: auto;
   color: #fff;
 	padding-bottom: 30px;
