try display image

--- a/cg_webapp/app/templates/index.html
+++ b/cg_webapp/app/templates/index.html
@@ -83,12 +83,11 @@
   </div>
   <div class="container">
     <div>
-      <img id="generated" src="{{ url_for('static', filename='img/portfolio/13.jpg') }}" alt="">
+      <img id="generated" src="/{{ image_name }}" alt="">
       </div>
   </div>
   <div class="container">
     <div id="generated">
-      <p>{{ latent_vector }}</p>
       <button><b>DOWNLOAD</b></button>
     </div>
   </div>
