Resolve werkzeug.routing.BuildError: Could not build url for endpoint 'main.home'

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -18,9 +18,9 @@
           </div>
           <nav>
             <ul>
-              <li><a href="{{ url_for('main.home') }}">Home</a></li>
-              <li class="current"><a href="{{ url_for('main.about') }}">About</a></li>
-              <li><a href="{{ url_for('main.help') }}">help</a></li>
+              <li><a href="{{ url_for('home') }}">Home</a></li>
+              <li class="current"><a href="{{ url_for('about') }}">About</a></li>
+              <li><a href="{{ url_for('help') }}">help</a></li>
             </ul>
           </nav>
         </div>
