--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,9 +18,9 @@
           </div>
           <nav>
             <ul>
-              <li class="current"><a href="{{ url_for('main.home') }}">Home</a></li>
-              <li><a href="{{ url_for('main.about') }}">About</a></li>
-              <li><a href="{{ url_for('main.help') }}">help</a></li>
+              <li class="current"><a href="{{ url_for('home') }}">Home</a></li>
+              <li><a href="{{ url_for('about') }}">About</a></li>
+              <li><a href="{{ url_for('help') }}">help</a></li>
             </ul>
           </nav>
         </div>
@@ -65,7 +65,7 @@
     <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
   </div>
   <!-- Grid column -->
-  
+
   <!-- Grid column -->
   <div class="pics">
     <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
@@ -107,7 +107,7 @@
           <div class="container">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h1 class="footer-top"><span class="highlight">Creative</span>GAN</h1>
-                  </div>  
+                  </div>
       <div class="container">
             <p class="footer-bottom">CreativeGan, Copyright &copy; 2020</p>
       </div>
