--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,128 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Affordable and professional web design">
-	<meta name="keywords" content="web design, affordable web design, professional web design">
-  	<meta name="author" content="Brad Traversy">
-    <title>Creative GAN| Welcome</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <div class="container">
-          <div id="branding">
-            <h1><span class="highlight">Creative</span>GAN</h1>
-          </div>
-          <nav>
-            <ul>
-              <li class="current"><a href="{{ url_for('home') }}">Home</a></li>
-              <li><a href="{{ url_for('about') }}">About</a></li>
-              <li><a href="{{ url_for('help') }}">help</a></li>
-            </ul>
-          </nav>
-        </div>
-    </header>
-<section class="container">
-    <div><h1><b>SAMPLE GENERATED IMAGES</b></h1></div>
-  <!-- Grid row -->
-      <div class="gallery" id="gallery">
-
-  <!-- Grid column -->
-      <div class="pics">
-        <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/2.png') }}">
-      </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-      <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/3.jpg') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-    <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/5.png') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/7.png') }}">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/10.jpg') }}">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/7.png') }}">
-  </div>
-  </div>
-</section>
-<br>
-<hr>
-  <div class="container">
-    <div>
-      <form method="POST">
-        <button id="generate" type="submit" onclick="window.loaction.reload();"> Generate Image</button>
-      </form>
-    </div>
-    <div id="generated" >
-      <h3><b>generated image</b></h3>
-    </div>
-  </div>
-  <div class="container">
-    <div>
-      <img class="gen_button" id="generated" src="{{ url_for('static', filename='/generated/gen.jpg') }}" alt="Generate Image">
-      </div>
-  </div>
-  <div class="container">
-    <div id="generated">
-      <button><b>DOWNLOAD</b></button>
-    </div>
-  </div>
-
-<!-- footer -->
-    <footer class="bg-dark">
-      <div class="footer" id="footer">
-          <div class="container">
-                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <h1 class="footer-top"><span class="highlight">Creative</span>GAN</h1>
-                  </div>
-      <div class="container">
-            <p class="footer-bottom">CreativeGan, Copyright &copy; 2020</p>
-      </div>
-
-  </footer>
-
-  <script>
-
-    const refreshOnClick = document.querySelector('.gen_button');
-    const refreshPage = () => {
-      location.reload();
-    }
-
-    refreshOnClick.addEventListener('click', refreshPage);
-
-  </script>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+{% endblock %}
