--- a/templates/base.html
+++ b/templates/base.html
@@ -3,107 +3,287 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Affordable and professional web design">
-	<meta name="keywords" content="web design, affordable web design, professional web design">
-  	<meta name="author" content="Brad Traversy">
-    <title>Creative GAN| Welcome</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/logo-01.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet" />
+    <title>Creative||Gan</title>
+    <style>
+      *,
+      *::after,
+      *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: inherit;
+      }
+
+      html {
+        font-size: 62.5%;
+      }
+
+      body {
+        box-sizing: border-box;
+        font-family: 'Raleway', sans-serif;
+        /* //font-size: 16px; */
+        font-weight: 40rem;
+        line-height: 1.7;
+        background-color: #f7f7f7;
+        padding: 3rem 3rem 0 3rem;
+      }
+
+      /* HEADER */
+      .header {
+        height: 12vh;
+        /* background-color: #52AFAC;, #29E6E0 */
+        background-image: linear-gradient(to right, #52afac, #29e6e0);
+        /* -webkit-background-clip: text; */
+        border-radius: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .header__box {
+        margin-left: 30px;
+      }
+
+      .header__img {
+        width: 10rem;
+      }
+
+      .header__heading {
+        font-size: 1.8rem;
+        color: rgb(10, 10, 10);
+        font-weight: 400;
+      }
+
+      .header__nav {
+        font-size: 1rem;
+        margin-right: 30px;
+        text-transform: uppercase;
+        display: inline-block;
+      }
+
+      .nav-container {
+        display: flex;
+      }
+
+      .about {
+        margin-right: 10px;
+        color: #fff;
+      }
+
+      .help {
+        margin-right: 10px;
+      }
+
+      .link {
+        font-family: 'Raleway', sans-serif;
+        text-decoration: none;
+        color: #999;
+        font-weight: 700;
+        font-size: 1.5rem;
+      }
+
+      /* section-main */
+      .section-main {
+        max-width: 120rem;
+        min-height: 50rem;
+        margin: 8rem auto;
+        background-color: #f7f7f7;
+      }
+
+      .container {
+        display: flex;
+        background-color: #f7f7f7;
+      }
+
+      .gallery {
+        background-color: inherit;
+        flex: 0 0 50%;
+        min-height: 50rem;
+      }
+
+      .Gallery__heading {
+        font-weight: 400;
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 5rem;
+      }
+
+      .row {
+        display: grid;
+
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        grid-template-rows: repeat(2, 20rem);
+        grid-gap: 5rem;
+      }
+
+      .img {
+        border-radius: 5px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+        transition: all 0.5s;
+        backface-visibility: hidden;
+        /* width: 20rem;
+        height: 20rem; */
+        box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.199);
+      }
+
+      .img:hover {
+        transform: scale(1.05);
+      }
+
+      /* generator */
+      .generator {
+        background-color: inherit;
+        flex: 0 0 50%;
+        display: grid;
+
+        grid-template-columns: 1fr 10rem;
+        grid-row-gap: 3rem;
+        justify-items: center;
+        align-content: center;
+      }
+
+      .generator__heading {
+        font-weight: 400;
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 5rem;
+
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+      }
+
+      .gen-img {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+        border-radius: 5px;
+        width: 35rem;
+        height: 35rem;
+        /* width: 100%;
+        height: 100%; */
+        object-fit: cover;
+        display: block;
+        box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.199);
+      }
+
+      .img:hover {
+        transform: scale(1.05);
+        backface-visibility: hidden;
+      }
+
+      .btn {
+        border: none;
+        cursor: pointer;
+        text-transform: uppercase;
+        text-decoration: none;
+        border-radius: 10rem;
+        transition: all 0.2s;
+      }
+
+      .btn:active,
+      .btn:focus {
+        outline: none;
+        transform: translateY(-0.1rem);
+        box-shadow: 0 0.5rem 1rem rgba(#000, 0.281);
+      }
+
+      .btn-generate {
+        /* background-color: #13CF7E; */
+        background-image: linear-gradient(to right, #13cf7e, #04ff92);
+        padding: 1.5rem 3rem;
+        font-size: 1.5rem;
+        margin-right: 3rem;
+        font-weight: 700;
+        color: #777;
+        align-self: center;
+        justify-self: center;
+        grid-row: 2 / 3;
+        grid-column: 2 / 3;
+      }
+
+      .btn-download {
+        background-image: linear-gradient(to right, #cf1913, #eb4c4c);
+        padding: 1rem 2rem;
+        font-size: 1rem;
+        font-weight: 400;
+
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+      }
+
+      /*
+      footer */
+      .footer {
+        /* background-color: #686565; */
+        background-image: linear-gradient(to right, #858080, #494545);
+        margin: 0 -3rem 0 -3rem;
+        height: 10vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .footer__text {
+        color: #fff;
+        font-weight: 400;
+      }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div id="branding">
-            <h1><span class="highlight">Creative</span>GAN</h1>
-          </div>
-          <nav>
-            <ul>
-              <li class="current"><a href="{{ url_for('home') }}">Home</a></li>
-              <li><a href="{{ url_for('about') }}">About</a></li>
-              <li><a href="{{ url_for('help') }}">help</a></li>
-            </ul>
-          </nav>
+<header>
+      <div class="header">
+        <div class="header__box">
+          <a href="/"> <img class="header__img" src="{{ url_for('static', filename='img/portfolio/logo-01.png') }}" alt="logo" /></a>
         </div>
+        <div class="header__heading">
+          <h1>Creative Gan</h1>
+        </div>
+        <div class="header__nav">
+          <div class="nav-container">
+            <div class="about">
+              <a class="link" href="{{ url_for('about') }}">About</a>
+            </div>
+            <div class="help">
+              <a class="link" href="{{ url_for('help') }}">help</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
-<section class="container">
-    <div><h1><b>SAMPLE GENERATED IMAGES</b></h1></div>
-  <!-- Grid row -->
-      <div class="gallery" id="gallery">
 
-  <!-- Grid column -->
-      <div class="pics">
-        <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/2.png') }}">
-      </div>
-  <!-- Grid column -->
 
-  <!-- Grid column -->
-      <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/3.jpg') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-    <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/5.png') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/7.png') }}">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/10.jpg') }}">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/12.jpg') }}" alt="Card image cap">
-    </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="pics">
-    <img class="img-fluid" height="400" width="400" src="{{ url_for('static', filename='img/portfolio/7.png') }}">
-  </div>
-  </div>
-</section>
-<br>
-<hr>
-  <div class="container">
-    <div>
-      <form method="POST">
-        <button type="submit"> Generate Image</button>
-      </form>
-    </div>
-    <div id="generated" >
-      <h3><b>generated image</b></h3>
-    </div>
-  </div>
-  <div class="container">
-    {%block content %}
-    {% endblock %}
-<!-- footer -->
-    <footer class="bg-dark">
-      <div class="footer" id="footer">
-          <div class="container">
-                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <h1 class="footer-top"><span class="highlight">Creative</span>GAN</h1>
-                  </div>
+  <section class="section-main">
       <div class="container">
-            <p class="footer-bottom">CreativeGan, Copyright &copy; 2020</p>
-      </div>
+        <div class="gallery">
+          <h2 class="Gallery__heading">Generated Images Gallery</h2>
+          <div class="row">
+            <img class="img" src="{{ url_for('static', filename='img/portfolio/1.png') }}" alt="img-1" />
 
-  </footer>
+            <img class="img" src="{{ url_for('static', filename='img/portfolio/2.png') }}" alt="img-2" />
+
+            <img class="img" src="{{ url_for('static', filename='img/portfolio/3.png') }}" alt="img-3" />
+
+            <img class="img" src="{{ url_for('static', filename='img/portfolio/4.png') }}" alt="img-4" />
+          </div>
+        </div>
+        <div class="generator">
+            <h2 class="generator__heading">Image Generator</h2>
+            <form class="btn btn--green btn-generate" method="POST">
+                <button class="btn btn--green" type="submit">Generate</button>
+            </form>
+                {%block content %}
+                {% endblock %}
+
+      </div>
+  </section>
+
+
+
+<div class="footer">
+      <h3 class="footer__text">Copyright &copy2020 CreativeGan. All rights reserved.</h3>
+    </div>
   </body>
 </html>
