--- a/templates/help.html
+++ b/templates/help.html
@@ -1,32 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Generative adversarial networks">
-	<meta name="keywords" content="GAN, creativeGAN">
-  	<meta name="author" content="Creative GAN">
-    <title>Creative GAN| Welcome</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet">
+    <title>help</title>
+    <style>
+        *,
+        *::after,
+        *::before {
+            margin: 0;
+            padding: 0;
+            box-sizing: inherit;
+        }
+
+        html {
+            font-size: 62.5%;
+        }
+
+        body {
+            box-sizing: border-box;
+            font-family: 'Raleway', sans-serif;
+            /* //font-size: 16px; */
+            font-weight: 40rem;
+            line-height: 1.7;
+            background-color: #f7f7f7;
+            padding: 3rem 3rem 0 3rem;
+        }
+
+        /* HEADER */
+        .header {
+            height: 12vh;
+            /* background-color: #52AFAC;, #29E6E0 */
+            background-image: linear-gradient(to right, #52AFAC, #29E6E0);
+            /* -webkit-background-clip: text; */
+            border-radius: 100px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+        }
+
+        .header__box {
+            margin-left: 30px;
+
+        }
+
+        .header__img {
+            width: 10rem;
+        }
+
+        .header__heading {
+            font-size: 1.5rem;
+            color: rgb(10, 10, 10);
+            font-weight: 200;
+        }
+
+        .header__nav {
+            font-size: 1rem;
+            margin-right: 30px;
+            text-transform: uppercase;
+            display: inline-block;
+        }
+
+        .nav-container {
+            display: flex;
+        }
+
+        .about {
+            margin-right: 10px;
+            color: #fff;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #999;
+            font-weight: 700;
+            font-size: 1.5rem;
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <div class="container">
-          <div id="branding">
-            <h1><span class="highlight">Creative</span>GAN</h1>
-          </div>
-          <nav>
-            <ul>
-              <li><a href="{{ url_for('home') }}">Home</a></li>
-              <li><a href="{{ url_for('about') }}">About</a></li>
-              <li class="current"><a href="{{ url_for('help') }}">help</a></li>
-            </ul>
-          </nav>
+        <div class="header">
+            <div class="header__box">
+                <a href="/"> <img class="header__img" src="{{ url_for('static', filename='img/portfolio/logo-01.png') }}" alt="logo"></a>
+            </div>
+            <div class="header__heading">
+                <h1>Help</h1>
+            </div>
+            <div class="header__nav">
+                <div class="nav-container">
+                    <div class="about">
+                        <a class="link" href="/about">about</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <main>
-      <p>Help</p>
+
     </main>
 </body>
+
 </html>
