--- a/templates/results.html
+++ b/templates/results.html
@@ -6,13 +6,10 @@
   </div>
   <div class="container">
     <div>
-      <img class="gen_button" id="generated" src="{{ url_for('static', filename='generated/'+filename) }}" alt="Generate Image">
+      <img class="gen-img" id="generated" src="{{ url_for('static', filename='generated/'+filename) }}" alt="gen-img">
       </div>
   </div>
-  <div class="container">
-    <div id="generated">
-      <button><b>DOWNLOAD</b></button>
-    </div>
+<button class="btn-download btn">download</button>
 </div>
 
 {% endblock %}
