--- a/templates/about.html
+++ b/templates/about.html
@@ -78,6 +78,12 @@
             font-weight: 700;
             font-size: 1.5rem;
         }
+        #content {
+            font-family: 'Raleway', sans-serif;
+            font-size: 25px;
+            padding: 100px;
+            margin-top: 200px;
+        }
     </style>
 </head>
 
@@ -100,7 +106,13 @@
         </div>
     </header>
     <main>
-
+            <div id="content">
+                    <p>creative-gan is a machine learning model based on the Generative Adversarial Networks technology(GANs).</br>GANs is a relatively new technology. It uses a generator and discriminator model.
+                        The two models are pitted against each other.</p>
+                        <p>Oftenly people have the desire to create unique designs. But then it is quite exhausting to think and come up with new designs.</p>
+                        <p>This website is specifically designed to generate unique car design images. </p>
+                        <p>The large number of uniquely generated images are beneficial to companies and designers as well.</p>
+                </div> 
     </main>
 
 </body>
